--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,14 @@
         android:text="Quantity"
         android:textAllCaps="true" />
 
+    <Button
+        android:id="@+id/increment"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="16dp"
+        android:onClick="increment"
+        android:text="+" />
+
     <TextView
         android:id="@+id/quantity_text_view"
         android:layout_width="wrap_content"
@@ -20,6 +28,15 @@
         android:text="0"
         android:textColor="@android:color/black"
         android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/decrement"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="16dp"
+        android:onClick="decrement"
+        android:text="-" />
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -32,7 +49,7 @@
         android:id="@+id/price_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$0"
+        android:text="MMK 500"
         android:textColor="@android:color/black"
         android:textSize="16sp" />
 
