--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,30 +13,38 @@
         android:text="Quantity"
         android:textAllCaps="true" />
 
-    <Button
-        android:id="@+id/increment"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="16dp"
-        android:onClick="increment"
-        android:text="+" />
-
-    <TextView
-        android:id="@+id/quantity_text_view"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:textColor="@android:color/black"
-        android:textSize="16sp" />
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/decrement"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="16dp"
-        android:onClick="decrement"
-        android:text="-" />
+        <Button
+            android:id="@+id/decrement"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginBottom="16dp"
+            android:onClick="decrement"
+            android:text="-" />
 
+        <TextView
+            android:id="@+id/quantity_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:text="0"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+        
+        <Button
+            android:id="@+id/increment"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginBottom="16dp"
+            android:onClick="increment"
+            android:text="+" />
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
